ingress-argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/argocd`)
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
